--- a/content/modules/ROOT/pages/01-agenda.adoc
+++ b/content/modules/ROOT/pages/01-agenda.adoc
@@ -157,7 +157,7 @@ apiVersion: v1
 metadata:
   name: quay-pull
 data:
-  .dockerconfigjson: $(cat $XDG_RUNTIME_DIR/containers/auth.json | tr -d "\t\n\r" | base64 -w 0)
+  .dockerconfigjson: $(cat $XDG_RUNTIME_DIR/containers/auth.json | tr -d "[:space:]\n\r" | base64 -w 0)
 type: kubernetes.io/dockerconfigjson
 kind: Secret
 EOF
