--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -1,3 +1,5 @@
 * xref:01-agenda.adoc[1. Agenda]
 
+* xref:chapter01.adoc[Chapter 1]
+
 * xref:variables-guide-delete-me.adoc[Variable Guide (Delete Me)]
